--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
-.root {
+/* .root {
     width: 100%;
     height: 100vh;
     background-image: url(./54-400x300.jpeg);
     transform: rotate(90deg);
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
