--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@
         @apply m-5 bg-black;
     }
 }
+
+@layer components {
+    .card{
+        @apply w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 md:bg-yellow-400 xx:bg-green-400;
+    }
+}
