--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-/* .root {
-    width: 100%;
-    height: 100vh;
-    background-image: url(./54-400x300.jpeg);
-    transform: rotate(90deg);
-} */
-
+:root{
+    --peter-primary: #fec4;
+    --peter-title: 28px;
+    --peter-text: #faf;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,4 +17,9 @@
     .card{
         @apply w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 md:bg-yellow-400 xx:bg-green-400;
     }
+}
+
+.test{
+    background-color: var(--peter-primary);
+    font-size: var(--peter-title);
 }
